--- a/src/style/schedule.css
+++ b/src/style/schedule.css
@@ -65,7 +65,16 @@
     height: auto;
   }
   .container-days {
-    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .container-days {
+    /* flex-wrap: wrap; */
+
+    flex-direction: column;
   }
   .container-days .days {
     margin: 1% 0;
