--- a/src/style/schedule.css
+++ b/src/style/schedule.css
@@ -61,6 +61,9 @@
 
 /* Media */
 @media (max-width: 800px) {
+  body {
+    background-color: var(--dark-color);
+  }
   .container-schedule {
     height: auto;
   }
