--- a/src/style/about.css
+++ b/src/style/about.css
@@ -78,11 +78,17 @@
     height: 100%;
     width: 90%;
     flex-direction: row;
+    flex-wrap: wrap;
     padding: 0;
   }
   .gallery-about div:nth-child(2) img {
     height: 200px;
+    width: 46%;
   }
+  .gallery-about div:nth-child(2) img:last-child {
+    width: 100%;
+  }
+
   .gallery-about div:nth-child(2) img:first-child,
   .gallery-about div:nth-child(2) img:last-child {
     padding: 2% 0;
