--- a/src/style/imc.css
+++ b/src/style/imc.css
@@ -30,6 +30,7 @@
   flex-direction: column;
 }
 .content-imc form label {
+  width: 40%;
   padding: 2% 0;
 }
 .content-imc form input {
@@ -43,7 +44,7 @@
   border: 1px solid var(--secondary-color);
 }
 .content-imc form button {
-  width: 30%;
+  width: 20%;
   margin: 2% auto;
   padding: 2%;
   border: none;
@@ -102,4 +103,32 @@
 }
 .imc-red span {
   color: red;
+}
+@media (max-width: 800px) {
+  .container-imc .content-imc {
+    width: 60%;
+  }
+  .content-imc form label {
+    width: 60%;
+  }
+  .content-imc form button {
+    width: 30%;
+    padding: 3%;
+  }
+}
+@media (max-width: 500px) {
+  .container-imc .content-imc {
+    width: 80%;
+  }
+  .content-imc form label {
+    width: 80%;
+    padding: 4%;
+  }
+  .content-imc form input {
+    padding: 4%;
+  }
+  .content-imc form button {
+    width: 40%;
+    padding: 4%;
+  }
 }
