--- a/src/style/info/pageAbout.css
+++ b/src/style/info/pageAbout.css
@@ -1,35 +1,6 @@
 .container-page-about {
   width: 100%;
 }
-/*  */
-.container-page-about h2 {
-  font-size: 3.4em;
-  color: var(--light-color);
-}
-.container-page-about h3 {
-  font-size: 2.2em;
-  color: var(--light-color);
-}
-.container-page-about p {
-  font-size: 1.7em;
-  color: var(--light-color);
-}
-.container-page-about b {
-  font-size: 1em;
-  color: var(--secondary-color);
-}
-/* Media */
-@media (max-width: 800px) {
-  .container-page-about h2 {
-    font-size: 2.4em;
-  }
-  .container-page-about h3 {
-    font-size: 1.7em;
-  }
-  .container-page-about p {
-    font-size: 1.4em;
-  }
-}
 
 /* Welcome */
 .container-page-about .about-welcome {
@@ -42,50 +13,49 @@
   height: 100%;
   display: flex;
   align-items: center;
+  background-color: black;
 }
 .about-welcome img {
   width: 100%;
   height: 100%;
   object-fit: fill;
-}
+  filter: opacity(.2);
+  mask-image: linear-gradient(black 60%, transparent);
+  }
 .about-welcome .welcome-text {
+  width: 100%;
+  height: 100%;
+}
+.welcome-text .container-text {
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-direction: column;
+flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.welcome-text .container-text {
+.container-text .left-text{
   width: 30%;
-  margin: 8%;
+  padding: 8%;
 }
-.welcome-text .container-text h2 {
-  padding: 1% 4%;
-  background-color: var(--dark-color);
-  /* clip-path: polygon(10% 0, 100% 0%, 100% 100%, 0% 100%); */
-  box-shadow: 0px 2px 1px var(--secondary-color);
-  border-radius: 6px 6px 0 0;
+.container-text .left-text svg{
+  width: 85%;
+}
+.container-text .right-text{
+  width: 30%;
+  padding: 8%;
 }
 .welcome-text .container-text p {
+  font-size: 2.4em;
   margin: 4% 0 0 0;
-  padding: 1% 4%;
   font-weight: bold;
   line-height: 1.4em;
-  background-color: var(--secondary-color);
-  /* clip-path: polygon(0% 0, 100% 0%, 90% 100%, 0% 100%); */
-  /* -2px? */
-  box-shadow: 0px 2px 1px var(--light-color);
-  border-radius: 0 0 6px 6px;
 }
 .welcome-text P:nth-child(2) {
-  background-color: var(--light-color);
-  color: var(--dark-color);
-  box-shadow: 0px 2px 1px var(--dark-color);
-  border-radius: 0px;
+  color: var(--secondary-color);
 }
 .about-welcome .welcome-arrow-down {
   position: absolute;
@@ -231,7 +201,6 @@
 }
 .discover-dude a {
   text-decoration: none;
-  font-size: 1.4em;
   font-weight: 700;
   background-color: var(--secondary-color);
   padding: 2%;
@@ -383,15 +352,9 @@
 .content-experience-point-text p {
   line-height: 1.4em;
 }
-.content-experience-point-text:hover p {
-  color: var(--tertiary-color);
-}
 .content-experience-point-text h4 {
   font-size: 1.8em;
   margin-bottom: 2%;
-}
-.content-experience-point-text:hover h4 {
-  color: var(--secondary-color);
 }
 .content-experience-point-text li {
   color: var(--secondary-color);
@@ -401,16 +364,28 @@
   color: var(--light-color);
 }
 .content-experience-point .content-experience-image{
-  width: 50%;
+  width: 44%;
   padding: 0 2%;
 }
 .content-experience-point .content-experience-image img{
   width: 100%;
+  transition: .6s;
 }
 .content-experience-point:nth-child(2) .content-experience-point-text{
   order: 1;
 }
 /*  */
+.content-experience-point .content-experience-point-text li,
+.content-experience-point:hover .content-experience-point-text h4{
+  color: var(--secondary-color)
+}
+.content-experience-point:hover .content-experience-point-text p{
+  color: var(--tertiary-color)
+}
+.content-experience-point:hover .content-experience-image img{
+  outline: 1px solid var(--light-color);
+}
+/*  */ 
 @media (max-width: 800px) {
   .experience-point .content-experience-point {
     display: block;
@@ -418,7 +393,7 @@
   .content-experience-point .content-experience-point-text,
   .content-experience-point .content-experience-image{
     width: 100%;
-    padding: 2% 0;
+    padding: 2%;
   }
 }
 
@@ -438,6 +413,9 @@
   margin-bottom: 2%;
 }
 .content-success b {
-  color: var(--primary-color);
+  color: var(--dark-color);
   font-weight: bold;
+}
+.content-success p{
+  line-height: 1.4em;
 }
