--- a/src/style/theme/App.css
+++ b/src/style/theme/App.css
@@ -7,6 +7,7 @@
   box-sizing: inherit;
   font-size: 16px;
   font-family: Roboto, sans-serif;
+  /* font-family: Jersey 25 Charted, sans-serif; */
 }
 /* Root */
 :root {
@@ -29,4 +30,55 @@ body {
   background-color: var(--primary-color);
   text-align: center;
   user-select: none;
+}
+/* General */
+h1, h2, h3, h4, h5, p, a{
+  color: var(--light-color);
+}
+h1{
+  font-size: 4.6em;
+}
+h2 {
+  font-size: 3.4em;
+}
+h3 {
+  font-size: 2.2em;
+}
+h4{
+  font-size: 2em;
+}
+h5{
+  font-size: 1.8em;
+}
+p {
+  font-size: 1.7em;
+}
+a{
+  font-size: 1.4em;
+}
+b, span {
+  font-size: 1em;
+  color: var(--secondary-color);
+}
+
+
+@media(max-width: 800px){
+  h1 {
+    font-size: 2em;
+  }
+  h2 {
+    font-size: 2.4em;
+  }
+  h4 {
+    font-size: 1.8em;
+  }
+  h5 {
+    font-size: 1.6em;
+  }
+  p {
+    font-size: 1.4em;
+  }
+  a {
+    font-size: 1.6em;
+  }
 }
